chore(memory check): added memlab scenario to check for memory leaks and issues

--- a/apps/angular-demo/src/app/app.component.html
+++ b/apps/angular-demo/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="action-bar">
+  <button class="action reset" (click)="reset()">Reset</button>
   <div
     *ngFor="let node of nodesLibrary"
     class="node-drag"
